--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="row"></div>
   <div class="column">
     <h2>Current Focus</h2>
-    <p>Mids sem internals</p>
+    <p>REBECCA araha guys</p>
   <div class="square-polygon-box"></div>
 
 
