--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p><h2>2022-2024</h2></p>
     <div class="row">
       <div class="column">
-        <h1>HAPPY </h1>
+        <h1>END </h1>
         <h2>NAME</h2>
         <p><b>Protonu</b></p>
         <p>Shruti SO FRESH</p>
@@ -27,7 +27,7 @@
         <p>Angel(dead body)</p>
       </div>
       <div class="column">
-        <h1>BIRTHDAY </h1>
+        <h1>PHASE </h1>
         <h2>BRANCH</h2>
         <p>Civil Engineering</p>
         <p>Civil Engineering</p>
@@ -38,7 +38,7 @@
         <p>Civil Engineering</p>
       </div>
       <div class="column">
-        <h1> Shruti</h1> 
+        <h1> US </h1> 
         <h2>YEAR</h2>
         <p>Third Year</p>
         <p>Third Year</p><p>Third Year</p><p>Third Year</p><p>Third Year</p><p>Third Year</p>
