--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
         <p>Bhool bhulaya 2 - 2022</p>
         <p>Puja 2022</p>
         <p>Puri 2023</p>
+         <p>Rebecca 2023</p>
       </div>
     </div>
   </div>
   <div class="row"></div>
   <div class="column">
     <h2>Current Focus</h2>
-    <p>REBECCA araha guys</p>
+    <p>Khatam karo ye college life</p>
   <div class="square-polygon-box"></div>
 
 
